# py-modsecurity

./: .gitignore  Dockerfile  Makefile  bdist_wheel.sh  pyproject.toml  setup.py
modsecurity/lib/: intervention.pxd  modsecurity.pxd  modsecurity.pyx  rules_set.pxd  rules_set.pyx  transaction.pxd  transaction.pyx
tests/: main.py
