[tool.poetry]
name = "modsecurity"
version = "0.1.1"
description = ""
authors = ["Cyril Jouve <jv.cyril@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9,>=3.9.7"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
flake8-assertive = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
ipython = "*"
isort = "*"
mypy = "*"
pylint = "*"
unify = "*"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.messages_control]
disable = """
    missing-function-docstring,
    missing-module-docstring
"""

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
